<resources>
    <string name="app_name">OpenLuks</string>
    <string name="tab_text_0">Partition</string>
    <string name="tab_text_1">Script</string>
    <string name="tab_text_2">Vold</string>
    <string name="tab_text_3">Veracrypt</string>
    <string name="saved">Enregistré</string>


    <!-- COMMON -->
    <string name="title_trip_book">Carnet de voyage</string>
    <string name="title_todo_list">Choses à faire</string>
    <string name="title_permission">Cette application a besoin de permission pour fonctionner</string>
    <string name="error_happened">Une erreur s\'est produite !</string>

    <!-- MENU -->
    <!-- Nav Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Menu Search -->
    <string name="menu_item_search">Search</string>
    <string name="activity_main_search_edit_text_hint">Search restaurant</string>
    <!-- Nav bottom -->
    <string name="activity_main_menu_bottom_map">Map View</string>
    <string name="activity_main_menu_bottom_list">List View</string>
    <string name="activity_main_menu_bottom_workmates">Workmates</string>
    <string name="activity_main_menu_bottom_chat" translatable="false">Chat</string>

    <!-- MAIN ACTIVITY -->
    <!-- FRAGMENT LUKS -->
    <string name="fragment_main_text_title">OpenLuks</string>
    <string name="fragment_main_text_description">Manage luks volume to access, mount and unmount luks partition.</string>
    <string name="fragment_main_button_mount_text">MOUNT</string>
    <string name="fragment_main_button_unmount_text">UNMOUNT</string>
    <string name="fragment_main_input_text_hint">/sdcard/</string>
    <string name="fragment_main_button_set_folder_text">Set Folder</string>

</resources>
