<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main_root_scroll_view"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_main_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/fragment_main_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/fragment_luks_text_tilte_margin_top"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_main_constraintLayout"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            android:text="@string/fragment_main_text_title"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fragment_main_text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/fragment_luks_text_description_horizontal_padding"
            android:layout_marginTop="@dimen/fragment_luks_text_tilte_margin_top"
            android:paddingEnd="@dimen/fragment_luks_text_description_horizontal_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_main_text_title"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            android:text="@string/fragment_main_text_description"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/fragment_main_image_mount_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_main_text_description"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_main_button_mount"
            app:srcCompat="@drawable/ic_baseline_not_interested_black_24"
            android:contentDescription="@null"/>

        <Button
            android:id="@+id/fragment_main_button_mount"
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/fragment_main_button_mount_text"
            android:textStyle="bold"
            android:background="@color/colorPrimary"/>

        <Button
            android:id="@+id/fragment_main_button_umount"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_main_button_mount"
            android:text="@string/fragment_main_button_umount_text"
            android:textStyle="bold"
            android:background="@color/colorAccent"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_main_input_text"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_main_button_umount"
            app:layout_constraintBottom_toTopOf="@id/fragment_main_button_set_folder"
            android:hint="@string/fragment_main_input_text_hint"
            android:textStyle="bold"
            android:background="@color/colorLightGrey"/>

        <Button
            android:id="@+id/fragment_main_button_set_folder"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_main_input_text"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/fragment_main_button_set_folder_text"
            android:textStyle="bold"
            android:background="@color/design_default_color_primary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>